# c_auth_flow

./: .gitignore  CMakeLists.txt  Dockerfile.alpine  Dockerfile.debian  README.md  vcpkg.json
.github/workflows/: linux-Windows-macOS.yml
cauthflow/: CMakeLists.txt  cauthflow_server.c  cauthflow_server.h  char_utils.c  char_utils.h  macros.h  open_browser.c  open_browser.h  tiny_web_server.c  tiny_web_server.h
cauthflow/cauthflow_configure/: CMakeLists.txt
cauthflow/cauthflow_google_auth/: CMakeLists.txt  google_auth.c  google_auth.h
cauthflow/cauthflow_open_browser/: CMakeLists.txt  open_browser.c
cauthflow_configure/: CMakeLists.txt  configure.h.in
cauthflow_google_auth/: CMakeLists.txt  google_auth.c  google_auth.h
cauthflow_oauth2/: CMakeLists.txt  char_utils.c  char_utils.h  macros.h  open_browser.h  tiny_web_server.c  tiny_web_server.h
cauthflow_oauth2/cauthflow_google_auth/: CMakeLists.txt  google_auth.c  google_auth.h
cauthflow_open_browser/: CMakeLists.txt  open_browser.c  open_browser.h
cauthflow_tests/: CMakeLists.txt  test.c  test_cauthflow.h
cauthflow_utils/: CMakeLists.txt  cauthflow_types_common.h  char_utils.c  char_utils.h  json_common.c  json_common.h
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
libcurl-simple-https/: CMakeLists.txt
